# MarineEyeProj

./: .gitignore  chl.nc  main.py  pyproject.toml  qnvrgc.geojson  setup_env_mac.sh  wjzknx.geojson
code/interface/: algal_bloom_ui.py  connect_cmems_ui.py  connect_gee_ui.py  floodcast_ui.py  main_ui.py  mangrover_ui.py  thermomarine_ui.py
code/marineeye/: algal_bloom_main.py  floodcast.py  mangrover.py  thermomarine.py
data/floodcast/Air_Density_Prev_Test_File/: copernicus_air_density_data.csv
data/floodcast/Altitude_Prev_Test_File/: copernicus_adt_data.csv
data/floodcast/Monthly_Averages/: Meta_Data_Monthly_Avg.csv
data/floodcast/Monthly_Averages/Air_Density/: Air_D_Average_Data_M1.csv  Air_D_Average_Data_M10.csv  Air_D_Average_Data_M11.csv  Air_D_Average_Data_M12.csv  Air_D_Average_Data_M2.csv  Air_D_Average_Data_M3.csv  Air_D_Average_Data_M4.csv  Air_D_Average_Data_M5.csv  (+4 more)
data/floodcast/Northward_Velocity_Prev_Test_File/: copernicus_vgosa_data.csv  copernicus_wind_stress_data.csv
data/mangrover/: mangrove_classes.dbf  mangrove_classes.shp  mangrove_classes.shx  mangrover_aoi_boundary_for_training.dbf  mangrover_aoi_boundary_for_training.shp  mangrover_aoi_boundary_for_training.shx  mangrover_aoi_for_plots.dbf  mangrover_aoi_for_plots.shp  mangrover_aoi_for_plots.shx
data/thermomarine/: sst_timeseries.csv  thermomarine_senegal_shp.dbf  thermomarine_senegal_shp.shp  thermomarine_senegal_shp.shx
models/: mangrove_model.pkl
ui/: algal_bloom.ui  connect_cmems.ui  connect_gee.ui  floodcast.ui  main.ui  mangrover.ui  thermomarine.ui
(+24 files in other folders)
